# arbiter

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  rustc-ice-2025-06-04T15_02_42-68107.txt
arbiter-core/: Cargo.toml  main.rs
arbiter-core/examples/: handler_example.rs
arbiter-core/src/: agent.rs  environment.rs  error.rs  fabric.rs  handler.rs  lib.rs  machine.rs  messager.rs  runtime.rs  time.rs  universe.rs  world.rs
arbiter-core/src/connection/: memory.rs  mod.rs  tcp.rs
arbiter-core/src/runtime/: mod.rs  wasm.rs
arbiter-core/src/transport/: memory.rs  mod.rs  tcp.rs
arbiter-core/tests/: common.rs  integration_test.rs  lib.rs  machine_integration.rs  multi_agent.rs
arbiter-core/tests/engine/: mod.rs
arbiter-engine/: Cargo.toml
arbiter-engine/src/: agent.rs  database.rs  environment.rs  error.rs  errors.rs  lib.rs  machine.rs  messager.rs  world.rs
arbiter-engine/tests/: mock_simulation.rs  universe_integration.rs
arbiter-macros/src/: lib.rs
bindings/: CHANGELOG.md
core/: CHANGELOG.md  Cargo.toml
engine/: CHANGELOG.md
examples/leader/: Cargo.toml
examples/leader/src/: lib.rs  main.rs
macros/: CHANGELOG.md
