[package]
authors = ["Harness Labs"]
edition = "2021"
name    = "arbiter-core"
version = "0.1.0"

[dependencies]
# Error and logging
atomic_enum = { version = "0.3" }
flume       = { version = "0.11" }
serde       = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }

# Temp, we should have a generic serialization strategy trait
serde_json = { version = "1.0" }

# WASM dependencies (optional)
wasm-bindgen = { version = "0.2", optional = true }

# TCP dependencies
tokio = { version = "1.0", optional = true }

[dev-dependencies]
tracing-test = { workspace = true }

[features]
default = []
tcp     = ["tokio"]
wasm    = ["wasm-bindgen"]
