[package]
authors = ["Harness Labs"]
edition = "2021"
name    = "arbiter-core"
version = "0.1.0"

[dependencies]
# Error and logging
flume     = { version = "0.11", optional = true }
serde     = { workspace = true }
thiserror = { workspace = true }
tracing   = { workspace = true }

# Temp, we should have a generic serialization strategy trait
serde_json = { version = "1.0" }

[dev-dependencies]
tracing-test = { workspace = true }

[features]
default   = ["in-memory"]
in-memory = ["flume"]
tcp       = []
