[package]
authors = ["Harness Labs"]
edition = "2021"
name    = "arbiter-core"
version = "0.1.0"

[dependencies]
# Error and logging
postage = "0.5.0"
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { version = "1.45", default-features = false, features = [
    "sync",
], optional = true }
tracing = { workspace = true }

# Temp, we should have a generic serialization strategy trait
serde_json = { version = "1.0" }

[dev-dependencies]
tracing-test = { workspace = true }

[features]
default   = ["in-memory"]
in-memory = ["tokio"]
tcp       = []
